# metalangle

./: .gitignore  .gn  .travis.yml  AUTHORS  BUILD.gn  CMakeLists.txt  DEPS  FUNDING.yml  README.md  appveyor.yml
.github/workflows/: build.yml
build_overrides/: angle.gni
extensions/: EGL_ANGLE_device_mtl.txt  EGL_MGL_texture_client_buffer.txt  GL_MGL_EGL_image_cube.txt
gni/: angle.gni
include/EGL/: eglext.h  eglext_angle.h  eglplatform.h
include/GLES2/: gl2.h  gl2ext_explicit_context_autogen.inc
include/GLSLANG/: ShaderLang.h  ShaderVars.h
include/platform/: FeaturesMtl.h  FeaturesVk.h
ios/xcode/: .gitignore  fetchDependencies.sh  travis_build.sh  travis_build_ios.sh  travis_build_mac.sh  travis_build_tvos.sh  travis_upload_log.sh
ios/xcode/MGLKit/: MGLContext+Private.h  MGLContext.h  MGLContext.mm  MGLKView+Private.h  MGLKView.h  MGLKView.mm  MGLKViewController+Mac.mm  MGLKViewController+Private.h  MGLKViewController+iOS.mm  MGLKViewController.h  MGLKViewController.mm  MGLKitPlatform.h  MGLLayer+Private.h  MGLLayer.h  MGLLayer.mm
ios/xcode/MGLKitSampleApp/: AppDelegate.h  AppDelegate.m  CC3Foundation.h  CC3Foundation.m  CC3GLMatrix.h  CC3GLMatrix.m  CC3Kazmath.c  CC3Kazmath.h  CC3Logging.h  CC3Math.h  CC3Math.m  GLViewController.h  GLViewController.m  Info_mac.plist  Main_tvos.storyboard  PVRTexture.h  (+8 more)
samples/multi_texture/: MultiTexture.cpp
samples/multiple_draw_buffers/: MultipleDrawBuffers.cpp
samples/particle_system/: ParticleSystem.cpp
samples/sample_util/: SampleApplication.cpp  SampleApplication.h
samples/shader_translator/: shader_translator.cpp
samples/simple_texture_2d/: SimpleTexture2D.cpp
scripts/: bootstrap.py  export_targets.py  generate_android_bp.py  generate_stats.py  registry_xml.py  run_code_generation.py  run_code_generation_hashes.json
scripts/code_generation_hashes/: ANGLE_format.json  D3D11_format.json  GL_CTS_(dEQP)_build_files.json  GL_EGL_WGL_loader.json  GL_EGL_entry_points.json  GLenum_value_to_string_map.json  Metal_default_shaders.json  Metal_format.json  Metal_format_table.json  Static_builtins.json  Vulkan_format.json  Vulkan_mandatory_format_support_table.json  proc_table.json
src/: commit_id.sh  compiler.gni  libGLESv2.gni
src/common/: FastVector.h  apple_platform_utils.h  platform.h  system_utils.h  system_utils_cocoa.mm  system_utils_ios.mm  system_utils_posix.cpp  system_utils_win.cpp  utilities.cpp
src/gpu_info_util/: SystemInfo.cpp  SystemInfo.h  SystemInfo_mac.mm
src/libANGLE/: Caps.cpp  Caps.h  Compiler.cpp  Constants.h  Context.cpp  Context_gl_3_2_autogen.h  Context_gles_3_2_autogen.h  Context_gles_ext_autogen.h  Display.cpp  Framebuffer.h  Program.cpp  Program.h  ProgramLinkedResources.cpp  ProgramLinkedResources.h  Semaphore.cpp  Semaphore.h  State.cpp  State.h  Surface.cpp  Texture.cpp  capture_gles_3_2_autogen.cpp  capture_gles_3_2_autogen.h  capture_gles_ext_autogen.cpp  capture_gles_ext_autogen.h  entry_points_enum_autogen.cpp  entry_points_enum_autogen.h  format_map_autogen.cpp  format_map_data.json  formatutils.cpp  formatutils.h  frame_capture_replay_autogen.cpp  gl_enum_utils_autogen.cpp  queryutils.cpp  validationEGL.cpp  validationES.cpp  validationES1.cpp  validationES2.cpp  validationES32_autogen.h  validationESEXT_autogen.h  validationGL32_autogen.h
src/libANGLE/renderer/metal/: BUILD.gn  BufferMtl.h  BufferMtl.mm  CompilerMtl.h  CompilerMtl.mm  ContextMtl.h  ContextMtl.mm  DevSetup.md  DisplayMtl.h  DisplayMtl.mm  DisplayMtl_api.h  FrameBufferMtl.h  FrameBufferMtl.mm  GlslangWrapper.h  GlslangWrapper.mm  GlslangWrapperMtl.h  GlslangWrapperMtl.mm  ImageMtl.h  ImageMtl.mm  Metal_platform.h  ProgramMtl.h  ProgramMtl.mm  QueryMtl.h  QueryMtl.mm  README.md  RenderBufferMtl.h  RenderBufferMtl.mm  RenderTargetMtl.h  RenderTargetMtl.mm  RendererMtl.h  RendererMtl.mm  SamplerMtl.h  SamplerMtl.mm  SemaphoreMtl.h  SemaphoreMtl.mm  ShaderMtl.mm  StateCacheMtl.h  StateCacheMtl.mm  SurfaceMtl.h  SurfaceMtl.mm  (+36 more)
src/libANGLE/renderer/metal/doc/: APPLE_clip_distance.md  OcclusionQueries.md  TextureImagesStorage.md
src/libANGLE/renderer/metal/shaders/: blit.metal  clear.metal  common.h  constants.h  copy_buffer.metal  copy_pixel_buffer.metal  default.metal  format_autogen.h  genIndices.metal  gen_indices.metal  gen_mipmap.metal  gen_mtl_internal_shaders.py  master_source.metal  misc.metal  mtl_default_shaders_src_autogen.inc  visibility.metal
src/libANGLE/renderer/metal/shaders/compiled/: compiled_default_metallib_2_1_debug_ios_autogen.inc  compiled_default_metallib_2_1_debug_ios_sim_autogen.inc  compiled_default_metallib_2_1_debug_mac_autogen.inc  compiled_default_metallib_2_1_debug_tvos_autogen.inc  compiled_default_metallib_2_1_debug_tvos_sim_autogen.inc  compiled_default_metallib_2_1_ios_autogen.inc  compiled_default_metallib_2_1_ios_sim_autogen.inc  compiled_default_metallib_2_1_mac_autogen.inc  compiled_default_metallib_2_1_tvos_autogen.inc  compiled_default_metallib_2_1_tvos_sim_autogen.inc  compiled_default_metallib_debug_ios_autogen.inc  compiled_default_metallib_debug_ios_sim_autogen.inc  compiled_default_metallib_debug_mac_autogen.inc  compiled_default_metallib_debug_tvos_autogen.inc  compiled_default_metallib_debug_tvos_sim_autogen.inc  compiled_default_metallib_ios_autogen.inc  compiled_default_metallib_ios_sim_autogen.inc  compiled_default_metallib_mac_autogen.inc  compiled_default_metallib_tvos_autogen.inc  compiled_default_metallib_tvos_sim_autogen.inc  mtl_default_shaders.inc
src/libGL/: entry_points_gl_3_2_autogen.cpp
src/libGLESv2/: entry_points_egl_ext.cpp  entry_points_gles_3_2_autogen.cpp  entry_points_gles_ext_autogen.cpp  entry_points_gles_ext_autogen.h  libGLESv2_autogen.cpp  libGLESv2_autogen.def  libGLESv2_no_capture_autogen.def  libGLESv2_with_capture_autogen.def  proc_table_egl_autogen.cpp
src/tests/: BUILD.gn  angle_end2end_tests.gni  angle_unittests.gni
util/: OSWindow.h  gles_loader_autogen.cpp  gles_loader_autogen.h  util.gni
util/ios/: IOSWindow.h  IOSWindow.mm
util/osx/: OSXWindow.mm
util/posix/: crash_handler_posix.cpp  test_utils_posix.cpp
(+221 files in other folders)
